// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Should render correctly 1`] = `
.c1 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: #ffffff;
  background-position: center;
  background-size: cover;
}

.c3 {
  height: 100%;
  padding: 2rem;
}

.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 #25201f1E;
  cursor: pointer;
  box-sizing: border-box;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 #25201f1E;
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 #00000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 #00000000;
  }
}

<div>
  <a
    class="c0"
    href="/test"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      />
    </div>
  </a>
</div>
`;

exports[`<Card /> Should render correctly hrefExternal 1`] = `
.c1 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: #ffffff;
  background-position: center;
  background-size: cover;
}

.c3 {
  height: 100%;
  padding: 2rem;
}

.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 #25201f1E;
  cursor: pointer;
  box-sizing: border-box;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 #25201f1E;
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 #00000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 #00000000;
  }
}

<div>
  <a
    class="c0"
    href="https://duckduckgo.com/"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      />
    </div>
  </a>
</div>
`;

exports[`<Card /> Should render correctly with custom className 1`] = `
.c1 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: #ffffff;
  background-position: center;
  background-size: cover;
}

.c3 {
  height: 100%;
  padding: 2rem;
}

.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 #25201f1E;
  cursor: pointer;
  box-sizing: border-box;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 #25201f1E;
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 #00000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 #00000000;
  }
}

<div>
  <a
    class="c0 test-custom-classname"
    href="/test"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      />
    </div>
  </a>
</div>
`;

exports[`<Card /> Should render with nextified href 1`] = `
.c1 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: #ffffff;
  background-position: center;
  background-size: cover;
}

.c3 {
  height: 100%;
  padding: 2rem;
}

.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 #25201f1E;
  cursor: pointer;
  box-sizing: border-box;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 #25201f1E;
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 #00000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 #00000000;
  }
}

<div>
  <a
    class="c0"
    href="/blog/test"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      />
    </div>
  </a>
</div>
`;
